# FrostEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.ini  notes.txt
Editor/: CMakeLists.txt  main.cpp  text.txt
Editor/Assets/Shaders/: Shader.frag  Shader.vert  Sprite.frag  Sprite.vert  Texture.frag  Texture.vert  basicF.glsl  basicV.glsl  debugV.glsl  fragment.glsl  textF.glsl  textV.glsl
Editor/include/: Game.h  Test.h
Editor/src/: Editor.cpp  Editor.h  Game.cpp  GameState.h  LifetimeSystem.cpp  LifetimeSystem.h  MovementSystem.cpp  PlayerSystem.cpp  PlayerSystem.h  ShootingSystem.cpp  SpriteSheet.h  main.cpp
Editor/src/Systems/: AsteroidSpawnerSystem.cpp  AsteroidSpawnerSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  FlickerSystem.cpp  FlickerSystem.h  LifetimeSystem.cpp  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  ScoreSystem.h  ScreenWrapSystem.cpp  ScreenWrapSystem.h  ShootingSystem.cpp  ShootingSystem.h  SpawnImmunitySystem.cpp  SpawnImmunitySystem.h
Engine/: Application.cpp  Application.h  CMakeLists.txt  Context.h  DebugRenderer.cpp  DebugRenderer.h  FontLoader.cpp  FontLoader.h  FrostMath.h  Input.cpp  Input.h  RenderSystem.h  ScriptSystem.h  SpriteBatchRenderer.cpp  SpriteBatchRenderer.h  TextRenderer.cpp  TextRenderer.h  ThreadPool.h  Window.cpp  Window.h  main.cpp  main.lua  player.lua
Engine/Assets/Shaders/: basicF.glsl  basicV.glsl  vertex.glsl
Engine/Core/: Camera2D.h  ComponentManager.h  ECS.cpp  ECS.h  EntityManager.h  GameObject.h  Input.h  Sprite.h  SpriteRenderer.cpp  SystemManager.h
Engine/Essentials/: EBO.cpp  EBO.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Vertex.h  Window.cpp  Window.h
Engine/Logger/: Logger.cpp  Logger.h
Engine/Rendering/Core/: Camera2D.cpp  Camera2D.h
Engine/Rendering/Essentials/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vertex.h
Engine/Systems/: CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h
Engine/include/: Application.h
Engine/include/Core/: Logger.h  Time.h
Engine/include/Math/: Math.h
Engine/include/Platform/: Event.h  EventQueue.h  Window.h
Engine/include/Renderer/: OpenGLContext.h  Renderer.h  RendererAPI.h  RendererPrimitives.h  Renderer_GL.h  Shader.h  VertexArray.h
Engine/include/Resources/: ResourceManager.h
Engine/src/: Application.cpp
Engine/src/Core/: Logger.cpp  Time.cpp
Engine/src/Platform/: Window_GLFW.cpp
Engine/src/Renderer/: OpenGLContext_GLFW.cpp  Renderer.cpp  RendererPrimitives.cpp  Renderer_GL.cpp  Shader.cpp
Engine/src/Resources/: ResourceManager.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Game.h  GameObject.h  ResourceManager.h  Shader.h  Sprite.h  SpriteRenderer.h  Texture2D.h  Window.h
src/: Game.cpp  Input.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp  Window.cpp  main.cpp  stb_image.cpp
